# localghost

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PRODUCT.md  README.md  compose.yaml  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  development.md  generating-an-override.md  index.md  integrating-applications.md  operations.md  security.md  troubleshooting.md
docs/stylesheets/: extra.css
examples/: compose.yaml
scripts/: integration-test.sh
src/local_dev_proxy/: __init__.py  cli.py  compose.py  generator.py
src/localghost/: .dockerignore  cli.py  compose.py  feedback.py  generator.py  proxy_compose.yaml  proxy_compose_https.yaml  routes.py  runner.py  trust.py
src/localghost/traefik_plugin/src/github.com/SmileyChris/traefik-localghost-ca/: .traefik.yml  ca.go  ca_test.go  docker.go  docker_test.go  go.mod  provider.go  provider_test.go  storage.go
src/localghost/traefik_plugin/src/github.com/SmileyChris/traefik-localghost-ca/cmd/bootstrap/: main.go
src/localhost/: .dockerignore  Dockerfile  cli.py  generator.py  proxy_compose.yaml  proxy_compose_https.yaml  routes.py  runner.py  trust.py
src/localhost/traefik_plugin/src/github.com/SmileyChris/traefik-localhost-ca/: .traefik.yml  ca.go  ca_test.go  docker.go  docker_test.go  go.mod  provider.go  provider_test.go  storage.go
src/localhost/traefik_plugin/src/github.com/SmileyChris/traefik-localhost-ca/cmd/bootstrap/: main.go
tests/: conftest.py  generator-test.sh  test_cli.py  test_compose.py  test_compose_contract.py  test_feedback.py  test_generator.py  test_generator_behaviour.py  test_generator_compose.py  test_routes.py  test_runner.py  test_trust.py  test_trust_cli.py
tests/fixtures/generator/: compose.override.yaml  compose.yaml
tests/fixtures/host-app/: index.html  server.py
