[project]
name = "localhost"
version = "1.0.0"
description = "Serve local applications at friendly .localhost URLs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "SmileyChris" }]
keywords = ["localhost", "docker", "compose", "traefik", "development", "proxy"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
]
dependencies = [
  "click>=8.2,<9",
  "rich>=13.9,<15",
  "ruamel-yaml>=0.18.10,<0.19",
]

[project.urls]
Homepage = "https://github.com/SmileyChris/localhost"
Documentation = "https://github.com/SmileyChris/localhost/tree/main/docs"
Repository = "https://github.com/SmileyChris/localhost"
Issues = "https://github.com/SmileyChris/localhost/issues"

[project.scripts]
localhost = "localhost.cli:cli"

[dependency-groups]
dev = [
  "pytest>=8.4,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["localhost"]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
